# Chess-Volatility-Bar

./: .env.example  CLAUDE.md  Commit3.md  Plan.md  README.md  pyproject.toml
.claude/: settings.local.json
scripts/: calibrate.py  demo.py
src/chess_vol/: __init__.py  analyze.py  calibrate.py  classify.py  cli.py  cli_report.py  config.py  engine.py  explain.py  server.py  volatility.py
src/chess_vol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analyze.py  test_calibrate.py  test_classify.py  test_cli.py  test_engine.py  test_explain.py  test_mate_handling.py  test_server.py  test_volatility.py  test_volatility_recursive.py
tests/fixtures/: calibration_corpus.json  forced_sequence.fen  multiple_mates.fen  only_move.fen  sample_game.pgn  sharp_position.fen
web/: app.js  index.html  library.js  styles.css
